--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 
 a{
 	color:black;
-	font-family: 'Comfortaa', cursive;
+	font-family: 'Megrim', cursive;
 	font-size: 20px;
 	list-style-type: none;
 	text-decoration: none;
@@ -16,7 +16,7 @@ a{
 
 .li{
 	color:#FFD1D1;
-	font-family: 'Comfortaa', cursive;
+	font-family: 'Megrim', cursive;
 	font-size: 20px;
 	list-style-type: none;
 	text-decoration: none;
@@ -53,6 +53,7 @@ header{
 	font: 20px;
 	color:black;
 	text-align: center;
+	margin-right: 15px;
 }
 
 .bar{
@@ -64,6 +65,72 @@ header{
 	
 }
 
+/* links on home page   */
+
+@import "compass/css3";
+
+/* Google Web Fonts
+===================================*/
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:700);
+/* Social Button Colours 
+===================================*/
+$instagram: #ea4c89;
+$twitter: #00aced;
+$facebook: #3b5998;
+$google-plus: #f63e28;
+$forrst: #31723e;
+$pinterest: #cb2027;
+
+/* Generic Container
+===================================*/
+.btn-container {
+  margin: 0px auto;
+  padding-left: 0px;
+}
+/* Social Button Style 
+===================================*/
+.social-btn {
+  color: #444;
+  background: white;
+  text-align: center;
+  padding: 30px 10px 10px 10px;
+  margin-left: 200px;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 700;
+  font-family: 'Ubuntu', sans-serif;
+  text-align: center;
+  text-decoration: none;
+  box-shadow: 0 3px 0 #ddd;
+  transition: color 0.4s ease-in-out ,box-shadow 0.4s ease-in-out;
+}
+/* Social Button Hover Styles 
+===================================*/
+.instagram  {
+  &:hover {
+
+    color: $dribbble;
+    box-shadow: 0 3px 0 $dribbble;
+  }
+}
+.twitter {
+  &:hover {
+    color: $twitter;
+    box-shadow: 0 3px 0 $twitter;
+  }
+}
+.facebook {
+  &:hover {
+    color: $facebook;
+    box-shadow: 0 3px 0 $facebook;
+  }
+}
+.google-plus {
+  &:hover {
+    color: $google-plus;
+    box-shadow: 0 3px 0 $google-plus;
+  }
+}
 
 /* about page */
 .div2{ 
@@ -75,19 +142,32 @@ header{
 	font: 20px;
 	margin-top: 20px;
 	margin-left: 350px;
+	font-family: 'Megrim', cursive;
+	color:#56564C;
 }
+
+.blogster{
+	height: 100px;
+	width:200px;
+	margin-right: 10px;
+	float: left;
+	color:#56564C;
+
+}
+
 .blogtext{
 	height:100px;
-	width:150px;
 	margin-top: 10px;
-	margin-left: 300px;
-	border-style: solid;
-	border-color: black;
-	border-width: 5px;
+	margin-left: 10px;
+	display: inline-block;
+	
+	/*font-family: 'Source Code Pro', ; */
+	color:#56564C;
+
 }
 
 .bar2{
-	background-color:black;
+	background-color:#D1CCCC;
 	height:2px;
 	width:580px;
 	margin-top: 20px;
@@ -97,12 +177,11 @@ header{
 
 .porfoliotext{
 	height:100px;
-	width:150px;
-	margin-top: 20px;
-	margin-left: 300px;
-	border-style: solid;
-	border-color: black;
-	border-width: 5px;
+	margin-top: 40px; 
+	margin-left: 10px;
+	font-family: 'Source Code Pro', ;
+	color:#56564C;
+
 }
 
 
@@ -110,37 +189,58 @@ header{
 
 .picture{
 	margin-left: 20px;
-	display: inline-block;
+	margin: 0px 0px 0px 70px;
+	float:left;
 }
 
 .infobox{
-	margin: 0px 10px 90px 20px;
+	margin: 70px 10px 0px 50px;
 	display: inline-block;
 }
 
 .barz{
 	height:2px;
-	width:300px;
-	background-color:black;
+	width:700px;
+	background-color:#D1CCCC;
 	margin-left: 100px; 
 	display: inline;
 	font-size:1px;
 }
 .barzz{
 	height:1px;
-	width:300px;
-	background-color:black;
+	width:700px;
+	background-color:#D1CCCC;
 	margin-left: 100px; 
 	display: inline;
 	font-size:1px;
 }
 
+.barzzz{
+	height:1px;
+	width:700px;
+	background-color:#D1CCCC;
+	margin-left: 100px; 
+	display: inline;
+	font-size:1px;
+}
 .info{
-	margin-bottom: 00px;
+	padding-left: 75px;
+	margin-bottom: 0px;
 	margin-left: 70px;
+	font-family: 'Lobster Two', cursive;
+	color:#56564C;
 }
 
 .info2{
-	margin-bottom: 0px;
+	padding-left: 60px;
 	margin-left: 70px;
+	font-family: 'Lobster Two', cursive;
+	color:#56564C;
+}
+
+
+.push{
+	color:white;
+	display: inline-block;
+	margin-bottom: 0px;
 }
